experiments: AnalyzePRs now uses the forges API